# static_res

./: Cargo.toml  README.md
src/: lib.rs
