[package]
name = "static_res"
version = "0.1.0"
edition = "2021"
description = "A compile time asset file collector"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.32"
syn = "1.0.81"
quote = "1.0.10"
globwalk = "0.8.1"
